# Inventory-Management

./: .env.example  .gitignore  README.md  docker-compose.override.yml  docker-compose.yml  inventory.db
api/: Dockerfile  Dockerfile.dev  database.py  db_clean.py  db_populate.py  inventory.db  main.py  models.py  schemas.py
api/db/: inventory.db
api/routers/: __init__.py  category.py  category_router.py  health.py  health_router.py  item.py  item_router.py  stock.py  stock_router.py  stockmovement_router.py  warehouse.py  warehouse_router.py
api/schemas/: __init__.py  category_schema.py  item_schema.py  stock_schema.py  stockmovement_schema.py  warehouse_schema.py
backend/: Dockerfile  Dockerfile.dev  pyproject.toml  requirements.txt
backend/app/: main.py
backend/app/api/: main.py
backend/app/api/routers/: category_router.py  health_router.py  item_router.py  login_router.py  stock_router.py  stockmovement_router.py  user_router.py  warehouse_router.py
backend/app/core/: __init__.py  auth.py  config.py  database.py  email_config.py
backend/app/models/: __init__.py  category_model.py  item_model.py  models.py  other_models_na.py  stock_model.py  stock_movement_model.py  users_model.py  warehouse_model.py
backend/app/schemas/: __init__.py  category_schema.py  item_schema.py  stock_schema.py  stockmovement_schema.py  user_schema.py  warehouse_schema.py
backend/app/scripts/: populate_db_via_api.py
frontend/: Dockerfile  Dockerfile.dev  package-lock.json  package.json
warehouse-manager/: Dockerfile  Dockerfile.dev  package-lock.json  package.json
(+61 files in other folders)
